Vue Example Source ~04-11 Set and Add Vue-Boostrap

--- a/hellovuejs/03-03.html
+++ b/hellovuejs/03-03.html
@@ -15,6 +15,16 @@
     <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
     <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
 
+    <style>
+        /** import 영역 **/
+        
+        @import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
+        body * {
+            /** 폰트 영문 이름 지정 **/
+            font-family: 'Jeju Gothic', sans-serif;
+        }
+    </style>
+
 </head>
 
 <body>
