--- a/hellovuejs/04-04.html
+++ b/hellovuejs/04-04.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <!-- Add this to <head> -->
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css" />
@@ -13,6 +14,11 @@
     <!-- Add this after vue.js -->
     <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
     <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.min.js"></script>
+
     <style>
         /** import 영역 **/
         
@@ -22,30 +28,27 @@
             font-family: 'Jeju Gothic', sans-serif;
         }
     </style>
+
 </head>
 
-<body>
-    <div id="example" class="m-3">
-        <b-form-input type="text" v-model="num"></b-form-input>
-        1부터 입력된 수까지의 합 : <span>{{sum}}</span>
-
+<body <div id="example" v-on:contextmenu="noEvent">
+    <a href="http://facebook.com" @click="confirmA">facebook</a>
     </div>
-    <script>
-        var vmSum = new Vue({
-            el: '#example',
-            data: {
-                num: 0
-            },
-            computed: {
-                sum: function() {
-                    console.log(Date.now()); // computed 의 경우 method 속성과 달리 캐싱된 값을 출력한다.
-                    var n = Number(this.num);
-                    if (Number.isNaN(n) || n < 1) return 0;
-                    return ((1 + n) * n / 2);
-                }
-            }
-        });
-    </script>
 </body>
+<script>
+    var vm = new Vue({
+        el: "#example",
+        methods: {
+            confirmA: function(e) {
+                if (!confirm("페이스북으로 이동하시겠습니까?")) {
+                    e.preventDefault();
+                }
+            },
+            noEvent: function(e) {
+                e.preventDefault();
+            }
+        }
+    })
+</script>
 
 </html>
